# finsight-50

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
dbt_transformation/: dbt_project.yml  profiles.yml.example
dbt_transformation/models/marts/: mart_current_valuation_snapshot.sql  mart_historical_financial_metrics.sql  mart_liquidity_capital_structure.sql  mart_sector_metrics_heatmap.sql  mart_yoy_growth_unpivot.sql
dbt_transformation/models/staging/: source.yml  stg_balance_sheet_annual.sql  stg_balance_sheet_quarterly.sql  stg_cash_flow_annual.sql  stg_cash_flow_quarterly.sql  stg_company_profile.sql  stg_income_statement_annual.sql  stg_income_statement_quarterly.sql  stg_stock_history.sql
dbt_transformation/tests/generic/: test_calculation_integrity.sql  test_is_positive.sql  test_is_recent.sql  test_max_date_gap.sql
kestra/: docker-compose.yml
kestra/flows/: KV.yml  setup_kv_store.yml  yfinance_to_bigquery_pro.yml  yfinance_to_bigquery_pro_test.yml
scripts/: main.py
scripts/top50/: Top_50_SPV1.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
