[project]
name = "final-project"
version = "0.1.0"
description = "S&P 500 Data Engineering Project - Zoomcamp 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "yfinance>=0.2.52",
    "dbt-core>=1.11.0",
    "dbt-bigquery>=1.11.0",
    "dlt[bigquery]>=1.0.0",
]

[tool.uv]
dev-dependencies = []